apps/arr/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - port: 7878
      protocol: TCP
      targetPort: http
  sessionAffinity: None
  type: ClusterIP
